# hc-test

./: .gitignore  Cargo.toml  HREA_INTEGRATION_PLAN.md  README.md  SVELTE_5_MIGRATION.md  TUTORIAL.md  package-lock.json  package.json
dnas/hc_test/workdir/: dna.yaml
dnas/hc_test/zomes/coordinator/hc_test/: Cargo.toml
dnas/hc_test/zomes/coordinator/hc_test/src/: lib.rs
dnas/hc_test/zomes/integrity/hc_test/: Cargo.toml
dnas/hrea_tests/workdir/: dna.yaml
dnas/hrea_tests/zomes/coordinator/user/: Cargo.toml
dnas/hrea_tests/zomes/coordinator/user/src/: lib.rs
dnas/hrea_tests/zomes/integrity/user/: Cargo.toml
ui/: package.json  tsconfig.json
ui/src/: App.svelte  ClientProvider.svelte  HREATest.svelte  contexts.svelte.ts  contexts.ts
ui/src/hc_test/hc_test/: types.ts
ui/src/hrea_tests/user/: types.ts
workdir/: dna.yaml  happ.yaml  web-happ.yaml
