[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.2"
hdk = "=0.5.2"
serde = "1.0"

[workspace.dependencies.user]
path = "dnas/hrea_tests/zomes/coordinator/user"

[workspace.dependencies.user_integrity]
path = "dnas/hrea_tests/zomes/integrity/user"
