[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.2"
hdk = "=0.5.2"
serde = "1.0"

[workspace.dependencies.hc_test]
path = "dnas/hc_test/zomes/coordinator/hc_test"

[workspace.dependencies.hc_test_integrity]
path = "dnas/hc_test/zomes/integrity/hc_test"
